--- a/04_ysd_analysis.ipynb
+++ b/04_ysd_analysis.ipynb
@@ -16,45 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('designs.csv')\n",
-    "seq_order = pd.read_csv('data/seqs_order_df.csv', index_col=0)\n",
-    "ysd_measure = pd.read_csv('data/ysd_bind_display.csv')\n",
-    "for col in ysd_measure.columns:\n",
-    "    ysd_measure[col] = [item.replace('*', '') if isinstance(item, str) else item \n",
-    "                        for item in ysd_measure[col]]\n",
-    "    if col in ['MFU IgG Bind', 'MFU Display']:\n",
-    "        wt_val = ysd_measure.loc[ysd_measure['Clone']=='wt'].iloc[0][col]\n",
-    "        ysd_measure[col] = [float(item)/float(wt_val) for item in ysd_measure[col]]\n",
-    "seq_order['ysd_plasmid'] = [str(i) for i in range(25, 25+len(seq_order))]\n",
-    "seq_order['group'] = ['High bind']*5 + ['Distant bind']*5 + ['Distant display']*10\n",
-    "ysd_measure = pd.merge(ysd_measure, seq_order, how='left', left_on='Clone', right_on='ysd_plasmid')\n",
-    "ysd_measure = pd.merge(ysd_measure, df, how='left', left_on='ysd_insert_seq_id', right_on='seq_id')\n",
-    "ysd_measure = ysd_measure[['Clone', 'group', 'MFU IgG Bind', 'MFU Display', 'Uninduced Yeast IgG MFU',\n",
-    "                           'Uninduced Yeast Display MFU', 'seq', 'seq_id']]\n",
-    "ysd_measure = ysd_measure.rename(columns={'group': 'Group'})\n",
-    "ysd_measure['Group'].replace(to_replace={'High bind': '5-10 mutants in \\\"high bind\\\" population',\n",
-    "                                         'Distant bind': '20 mutants in \\\"bind\\\" population',\n",
-    "                                         'Distant display': '40-50 mutants in \\\"display\\\" population', \n",
-    "                                         None:'Control'}, inplace=True)\n",
-    "ysd_measure.to_csv('data/ysd_measure.csv')"
+    "ysd_measure = pd.read_csv('data/ysd_measure.csv', index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ysd_measure = pd.read_csv('data/ysd_measure.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +146,7 @@
        "5   EnsC-20  7.67        7.80"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
