--- a/03_design_experimental_analysis.ipynb
+++ b/03_design_experimental_analysis.ipynb
@@ -1361,6 +1361,450 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>seq_id</th>\n",
+       "      <th>seq</th>\n",
+       "      <th>fit</th>\n",
+       "      <th>model</th>\n",
+       "      <th>mutations</th>\n",
+       "      <th>num_mut</th>\n",
+       "      <th>dna_seq</th>\n",
+       "      <th>final_dna_seq</th>\n",
+       "      <th>LR</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wteq_e</th>\n",
+       "      <th>disp_0e</th>\n",
+       "      <th>ebind1</th>\n",
+       "      <th>edisp1</th>\n",
+       "      <th>ebind2</th>\n",
+       "      <th>edisp2</th>\n",
+       "      <th>ebind</th>\n",
+       "      <th>edisp</th>\n",
+       "      <th>protease_site</th>\n",
+       "      <th>bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>seq_0</td>\n",
+       "      <td>MFYKLILNGKTLKGETTTEAVDAYTAEKRFKQYANDNGVYGEWTYD...</td>\n",
+       "      <td>9.888220</td>\n",
+       "      <td>FCN</td>\n",
+       "      <td>('Q1F', 'A23Y', 'V28R', 'D39Y', 'D46R')</td>\n",
+       "      <td>5</td>\n",
+       "      <td>TTCTATAAATTAATCTTGAACGGTAAGACTTTGAAGGGTGAAACCA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCTTCTATAAATTAATCTTGAACGGTAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.797307</td>\n",
+       "      <td>-1.378914</td>\n",
+       "      <td>-0.287429</td>\n",
+       "      <td>0.310811</td>\n",
+       "      <td>-0.301030</td>\n",
+       "      <td>0.122863</td>\n",
+       "      <td>-0.294230</td>\n",
+       "      <td>0.216837</td>\n",
+       "      <td>True</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>seq_1</td>\n",
+       "      <td>MFYKLILNGKTLKGETWTEAVDAYTAEKRFKQYANDNGVWGEWTYD...</td>\n",
+       "      <td>9.749965</td>\n",
+       "      <td>FCN</td>\n",
+       "      <td>('Q1F', 'T16W', 'A23Y', 'V28R', 'D39W')</td>\n",
+       "      <td>5</td>\n",
+       "      <td>TTCTATAAATTAATCTTGAACGGTAAGACTTTGAAGGGTGAAACCT...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCTTCTATAAATTAATCTTGAACGGTAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.965339</td>\n",
+       "      <td>-0.168749</td>\n",
+       "      <td>-0.228372</td>\n",
+       "      <td>0.369615</td>\n",
+       "      <td>0.188794</td>\n",
+       "      <td>0.252371</td>\n",
+       "      <td>-0.019789</td>\n",
+       "      <td>0.310993</td>\n",
+       "      <td>True</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>seq_2</td>\n",
+       "      <td>MQYKLILNGKTLKGETTTEAVDAYRAEKRFKQYANDNGVYGEWTYD...</td>\n",
+       "      <td>9.851182</td>\n",
+       "      <td>FCN,LR,EnsM</td>\n",
+       "      <td>('A23Y', 'T24R', 'V28R', 'D39Y', 'D46R')</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CAATATAAATTAATCTTGAACGGTAAGACTTTGAAGGGTGAAACCA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAATATAAATTAATCTTGAACGGTAAGA...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.230432</td>\n",
+       "      <td>-1.761907</td>\n",
+       "      <td>0.346878</td>\n",
+       "      <td>0.197679</td>\n",
+       "      <td>0.481069</td>\n",
+       "      <td>0.216903</td>\n",
+       "      <td>0.413973</td>\n",
+       "      <td>0.207291</td>\n",
+       "      <td>True</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>seq_3</td>\n",
+       "      <td>MFYKLILFGKTLKGETTTWAVDAYTAEKRFKQYANDNGVDGEWTYD...</td>\n",
+       "      <td>9.603757</td>\n",
+       "      <td>FCN</td>\n",
+       "      <td>('Q1F', 'N7F', 'E18W', 'A23Y', 'V28R')</td>\n",
+       "      <td>5</td>\n",
+       "      <td>TTCTATAAATTGATCTTATTCGGTAAGACTTTGAAGGGTGAAACCA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCTTCTATAAATTGATCTTATTCGGTAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.771156</td>\n",
+       "      <td>-1.813579</td>\n",
+       "      <td>-0.034362</td>\n",
+       "      <td>-0.113968</td>\n",
+       "      <td>0.165553</td>\n",
+       "      <td>0.533412</td>\n",
+       "      <td>0.065596</td>\n",
+       "      <td>0.209722</td>\n",
+       "      <td>True</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>seq_4</td>\n",
+       "      <td>MQYKLILFGKTLKGETTTEAVDAHTAEKVFKQYANDNGVFGLWTYD...</td>\n",
+       "      <td>8.951613</td>\n",
+       "      <td>FCN</td>\n",
+       "      <td>('N7F', 'A23H', 'D39F', 'E41L', 'D46R')</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CAATACAAGTTGATCTTATTCGGTAAGACTTTGAAGGGTGAAACCA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAATACAAGTTGATCTTATTCGGTAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-2.786163</td>\n",
+       "      <td>-0.830348</td>\n",
+       "      <td>0.021675</td>\n",
+       "      <td>0.194207</td>\n",
+       "      <td>0.089106</td>\n",
+       "      <td>0.419798</td>\n",
+       "      <td>0.055391</td>\n",
+       "      <td>0.307002</td>\n",
+       "      <td>False</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>calibration_seq_25a</td>\n",
+       "      <td>MQYKLILNGKTLKGETTTQAVDAYTAEKVFKQYANDNGVDGEWTYD...</td>\n",
+       "      <td>2.529475</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CAGTATAAACTAATACTTAATGGGAAAACTTTAAAAGGTGAAACCA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAGTATAAACTAATACTTAATGGGAAAA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1.613174</td>\n",
+       "      <td>-0.868089</td>\n",
+       "      <td>-0.481650</td>\n",
+       "      <td>-0.094314</td>\n",
+       "      <td>-0.104600</td>\n",
+       "      <td>0.297305</td>\n",
+       "      <td>-0.293125</td>\n",
+       "      <td>0.101496</td>\n",
+       "      <td>False</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>calibration_seq_25b</td>\n",
+       "      <td>MQYKLILNGKTLKGETTTQAVDAYTAEKVFKQYANDNGVDGEWTYD...</td>\n",
+       "      <td>2.529475</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>CAGTATAAGCTGATTCTAAACGGGAAAACATTAAAGGGAGAAACAA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAGTATAAGCTGATTCTAAACGGGAAAA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-4.011070</td>\n",
+       "      <td>3.120895</td>\n",
+       "      <td>-0.199222</td>\n",
+       "      <td>0.035814</td>\n",
+       "      <td>-0.080671</td>\n",
+       "      <td>0.092394</td>\n",
+       "      <td>-0.139947</td>\n",
+       "      <td>0.064104</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>wt_1</td>\n",
+       "      <td>MQYKLILNGKTLKGETTTEAVDAATAEKVFKQYANDNGVDGEWTYD...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CAATATAAGCTGATCCTTAACGGCAAGACTCTTAAAGGTGAAACTA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAATATAAGCTGATCCTTAACGGCAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.399858</td>\n",
+       "      <td>-0.707746</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.365322</td>\n",
+       "      <td>-0.115135</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.057567</td>\n",
+       "      <td>0.182661</td>\n",
+       "      <td>False</td>\n",
+       "      <td>WT Eq bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>1998</td>\n",
+       "      <td>wt_2</td>\n",
+       "      <td>MQYKLILNGKTLKGETTTEAVDAATAEKVFKQYANDNGVDGEWTYD...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CAATACAAGCTAATCTTAAACGGGAAGACATTGAAAGGTGAAACTA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAATACAAGCTAATCTTAAACGGGAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.327253</td>\n",
+       "      <td>-0.212930</td>\n",
+       "      <td>0.594559</td>\n",
+       "      <td>0.441875</td>\n",
+       "      <td>0.460906</td>\n",
+       "      <td>0.114472</td>\n",
+       "      <td>False</td>\n",
+       "      <td>WT Eq bind</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>1999</td>\n",
+       "      <td>wt_3</td>\n",
+       "      <td>MQYKLILNGKTLKGETTTEAVDAATAEKVFKQYANDNGVDGEWTYD...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CAGTACAAATTGATATTAAATGGCAAGACATTGAAGGGGGAAACAA...</td>\n",
+       "      <td>ACTCAAGGTCTCGCTAGCCAGTACAAATTGATATTAAATGGCAAGA...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.600514</td>\n",
+       "      <td>-1.235813</td>\n",
+       "      <td>-0.118776</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.132207</td>\n",
+       "      <td>-0.059388</td>\n",
+       "      <td>-0.066104</td>\n",
+       "      <td>False</td>\n",
+       "      <td>High bind</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1950 rows × 46 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0               seq_id  \\\n",
+       "0              0                seq_0   \n",
+       "1              1                seq_1   \n",
+       "2              2                seq_2   \n",
+       "3              3                seq_3   \n",
+       "4              4                seq_4   \n",
+       "...          ...                  ...   \n",
+       "1995        1995  calibration_seq_25a   \n",
+       "1996        1996  calibration_seq_25b   \n",
+       "1997        1997                 wt_1   \n",
+       "1998        1998                 wt_2   \n",
+       "1999        1999                 wt_3   \n",
+       "\n",
+       "                                                    seq       fit  \\\n",
+       "0     MFYKLILNGKTLKGETTTEAVDAYTAEKRFKQYANDNGVYGEWTYD...  9.888220   \n",
+       "1     MFYKLILNGKTLKGETWTEAVDAYTAEKRFKQYANDNGVWGEWTYD...  9.749965   \n",
+       "2     MQYKLILNGKTLKGETTTEAVDAYRAEKRFKQYANDNGVYGEWTYD...  9.851182   \n",
+       "3     MFYKLILFGKTLKGETTTWAVDAYTAEKRFKQYANDNGVDGEWTYD...  9.603757   \n",
+       "4     MQYKLILFGKTLKGETTTEAVDAHTAEKVFKQYANDNGVFGLWTYD...  8.951613   \n",
+       "...                                                 ...       ...   \n",
+       "1995  MQYKLILNGKTLKGETTTQAVDAYTAEKVFKQYANDNGVDGEWTYD...  2.529475   \n",
+       "1996  MQYKLILNGKTLKGETTTQAVDAYTAEKVFKQYANDNGVDGEWTYD...  2.529475   \n",
+       "1997  MQYKLILNGKTLKGETTTEAVDAATAEKVFKQYANDNGVDGEWTYD...       NaN   \n",
+       "1998  MQYKLILNGKTLKGETTTEAVDAATAEKVFKQYANDNGVDGEWTYD...       NaN   \n",
+       "1999  MQYKLILNGKTLKGETTTEAVDAATAEKVFKQYANDNGVDGEWTYD...       NaN   \n",
+       "\n",
+       "            model                                 mutations  num_mut  \\\n",
+       "0             FCN   ('Q1F', 'A23Y', 'V28R', 'D39Y', 'D46R')        5   \n",
+       "1             FCN   ('Q1F', 'T16W', 'A23Y', 'V28R', 'D39W')        5   \n",
+       "2     FCN,LR,EnsM  ('A23Y', 'T24R', 'V28R', 'D39Y', 'D46R')        5   \n",
+       "3             FCN    ('Q1F', 'N7F', 'E18W', 'A23Y', 'V28R')        5   \n",
+       "4             FCN   ('N7F', 'A23H', 'D39F', 'E41L', 'D46R')        5   \n",
+       "...           ...                                       ...      ...   \n",
+       "1995          NaN                                       NaN        2   \n",
+       "1996          NaN                                       NaN        2   \n",
+       "1997          NaN                                       NaN        0   \n",
+       "1998          NaN                                       NaN        0   \n",
+       "1999          NaN                                       NaN        0   \n",
+       "\n",
+       "                                                dna_seq  \\\n",
+       "0     TTCTATAAATTAATCTTGAACGGTAAGACTTTGAAGGGTGAAACCA...   \n",
+       "1     TTCTATAAATTAATCTTGAACGGTAAGACTTTGAAGGGTGAAACCT...   \n",
+       "2     CAATATAAATTAATCTTGAACGGTAAGACTTTGAAGGGTGAAACCA...   \n",
+       "3     TTCTATAAATTGATCTTATTCGGTAAGACTTTGAAGGGTGAAACCA...   \n",
+       "4     CAATACAAGTTGATCTTATTCGGTAAGACTTTGAAGGGTGAAACCA...   \n",
+       "...                                                 ...   \n",
+       "1995  CAGTATAAACTAATACTTAATGGGAAAACTTTAAAAGGTGAAACCA...   \n",
+       "1996  CAGTATAAGCTGATTCTAAACGGGAAAACATTAAAGGGAGAAACAA...   \n",
+       "1997  CAATATAAGCTGATCCTTAACGGCAAGACTCTTAAAGGTGAAACTA...   \n",
+       "1998  CAATACAAGCTAATCTTAAACGGGAAGACATTGAAAGGTGAAACTA...   \n",
+       "1999  CAGTACAAATTGATATTAAATGGCAAGACATTGAAGGGGGAAACAA...   \n",
+       "\n",
+       "                                          final_dna_seq     LR  ...    wteq_e  \\\n",
+       "0     ACTCAAGGTCTCGCTAGCTTCTATAAATTAATCTTGAACGGTAAGA...  False  ... -4.797307   \n",
+       "1     ACTCAAGGTCTCGCTAGCTTCTATAAATTAATCTTGAACGGTAAGA...  False  ... -4.965339   \n",
+       "2     ACTCAAGGTCTCGCTAGCCAATATAAATTAATCTTGAACGGTAAGA...   True  ... -4.230432   \n",
+       "3     ACTCAAGGTCTCGCTAGCTTCTATAAATTGATCTTATTCGGTAAGA...  False  ... -4.771156   \n",
+       "4     ACTCAAGGTCTCGCTAGCCAATACAAGTTGATCTTATTCGGTAAGA...  False  ... -2.786163   \n",
+       "...                                                 ...    ...  ...       ...   \n",
+       "1995  ACTCAAGGTCTCGCTAGCCAGTATAAACTAATACTTAATGGGAAAA...  False  ... -1.613174   \n",
+       "1996  ACTCAAGGTCTCGCTAGCCAGTATAAGCTGATTCTAAACGGGAAAA...  False  ... -4.011070   \n",
+       "1997  ACTCAAGGTCTCGCTAGCCAATATAAGCTGATCCTTAACGGCAAGA...  False  ... -0.399858   \n",
+       "1998  ACTCAAGGTCTCGCTAGCCAATACAAGCTAATCTTAAACGGGAAGA...  False  ...  0.000000   \n",
+       "1999  ACTCAAGGTCTCGCTAGCCAGTACAAATTGATATTAAATGGCAAGA...  False  ... -0.600514   \n",
+       "\n",
+       "       disp_0e    ebind1    edisp1    ebind2    edisp2     ebind     edisp  \\\n",
+       "0    -1.378914 -0.287429  0.310811 -0.301030  0.122863 -0.294230  0.216837   \n",
+       "1    -0.168749 -0.228372  0.369615  0.188794  0.252371 -0.019789  0.310993   \n",
+       "2    -1.761907  0.346878  0.197679  0.481069  0.216903  0.413973  0.207291   \n",
+       "3    -1.813579 -0.034362 -0.113968  0.165553  0.533412  0.065596  0.209722   \n",
+       "4    -0.830348  0.021675  0.194207  0.089106  0.419798  0.055391  0.307002   \n",
+       "...        ...       ...       ...       ...       ...       ...       ...   \n",
+       "1995 -0.868089 -0.481650 -0.094314 -0.104600  0.297305 -0.293125  0.101496   \n",
+       "1996  3.120895 -0.199222  0.035814 -0.080671  0.092394 -0.139947  0.064104   \n",
+       "1997 -0.707746  0.000000  0.365322 -0.115135  0.000000 -0.057567  0.182661   \n",
+       "1998  0.000000  0.327253 -0.212930  0.594559  0.441875  0.460906  0.114472   \n",
+       "1999 -1.235813 -0.118776  0.000000  0.000000 -0.132207 -0.059388 -0.066104   \n",
+       "\n",
+       "      protease_site         bin  \n",
+       "0              True   High bind  \n",
+       "1              True   High bind  \n",
+       "2              True   High bind  \n",
+       "3              True   High bind  \n",
+       "4             False   High bind  \n",
+       "...             ...         ...  \n",
+       "1995          False   High bind  \n",
+       "1996          False         NaN  \n",
+       "1997          False  WT Eq bind  \n",
+       "1998          False  WT Eq bind  \n",
+       "1999          False   High bind  \n",
+       "\n",
+       "[1950 rows x 46 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MMYKCIRNPPVDWEPPWWWTVIWWMAECCWCEMYNIFIWWMEITWIIAPKHFGMTE']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df['EnsC'] & (df['edisp'] < -1) & (df['num_mut'] >= 40) \n",
+    "       & (~df['protease_site']) & (df['seq_id'] == 'seq_1476')].seq.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
