--- a/03_design_experimental_analysis.ipynb
+++ b/03_design_experimental_analysis.ipynb
@@ -1153,7 +1153,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n",
       "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
@@ -1161,7 +1160,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'High bind': 38, nan: 1, nan: 1, nan: 1} {'High bind': 20, 'WT Eq bind': 15, nan: 1, 'Low bind': 1, 'No function': 1, nan: 1, nan: 1}\n",
+      "{'High bind': 38, nan: 1, nan: 1, nan: 1} {'High bind': 20, 'WT Eq bind': 15, nan: 1, 'Low bind': 1, 'No function': 1, nan: 1, nan: 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'High bind': 33, nan: 1, 'WT Eq bind': 1, nan: 1, nan: 1, nan: 1, nan: 1, nan: 1, nan: 1} {nan: 1, 'High bind': 33, nan: 1, nan: 1, nan: 1, nan: 1, nan: 1}\n"
      ]
     },
@@ -1169,7 +1181,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n",
       "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
@@ -1177,7 +1188,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'High bind': 27, 'Low bind': 4, 'WT Eq bind': 10} {'Low bind': 13, 'WT Eq bind': 4, 'High bind': 10, 'No function': 12, nan: 1, nan: 1}\n",
+      "{'High bind': 27, 'Low bind': 4, 'WT Eq bind': 10} {'Low bind': 13, 'WT Eq bind': 4, 'High bind': 10, 'No function': 12, nan: 1, nan: 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'High bind': 19, 'Low bind': 10, 'WT Eq bind': 11, 'No function': 1} {'No function': 29, 'WT Eq bind': 2, 'Low bind': 9, 'High bind': 1}\n"
      ]
     },
@@ -1185,7 +1209,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n",
       "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
@@ -1193,7 +1216,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{nan: 1, 'WT Eq bind': 6, 'High bind': 29, 'Low bind': 2, nan: 1, nan: 1, nan: 1} {'High bind': 9, 'WT Eq bind': 5, 'Low bind': 7, 'No function': 19, nan: 1}\n",
+      "{nan: 1, 'WT Eq bind': 6, 'High bind': 29, 'Low bind': 2, nan: 1, nan: 1, nan: 1} {'High bind': 9, 'WT Eq bind': 5, 'Low bind': 7, 'No function': 19, nan: 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'High bind': 23, nan: 1, 'Low bind': 5, nan: 1, nan: 1, nan: 1, 'WT Eq bind': 5, nan: 1, nan: 1, nan: 1} {'WT Eq bind': 10, nan: 1, nan: 1, 'No function': 5, 'Low bind': 18, nan: 1, nan: 1, 'High bind': 2, nan: 1}\n"
      ]
     },
@@ -1201,7 +1237,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n",
       "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
      ]
     },
@@ -1209,7 +1244,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'High bind': 34, nan: 1, 'Low bind': 2, 'WT Eq bind': 1, nan: 1, nan: 1} {'High bind': 21, 'No function': 6, 'WT Eq bind': 3, 'Low bind': 9, nan: 1, nan: 1}\n",
+      "{'High bind': 34, nan: 1, 'Low bind': 2, 'WT Eq bind': 1, nan: 1, nan: 1} {'High bind': 21, 'No function': 6, 'WT Eq bind': 3, 'Low bind': 9, nan: 1, nan: 1}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{nan: 1, 'High bind': 37, nan: 1, nan: 1, nan: 1} {'High bind': 31, nan: 1, 'WT Eq bind': 5, nan: 1, nan: 1, 'Low bind': 1}\n"
      ]
     },
