Fix broken scripts for 01 gen_data/fix analysis to use processed data format

--- a/01_extrapolation_analysis.ipynb
+++ b/01_extrapolation_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
      "text": [
       "<>:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "<>:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "/var/folders/tv/s_6vtgbd0ms7v3myd2_g_9f40000gn/T/ipykernel_54739/3862992422.py:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
+      "/var/folders/tv/s_6vtgbd0ms7v3myd2_g_9f40000gn/T/ipykernel_98604/3862992422.py:10: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
       "  func_list = [float(func) for func in func_list.split(' ') if func is not '']\n"
      ]
     }
@@ -90,15 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The PostScript backend does not support transparency; partially transparent artists will be rendered opaque.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(-34.2533781395, 85.5288151495)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -132,46 +135,29 @@
     "plt.ylabel('Predicted fitness')\n",
     "plt.xlabel('Number of mutations')\n",
     "plt.ylim(ylims)\n",
-    "plt.savefig('plots/pred_fit_num_mut_cnns.eps', format='eps')"
+    "# plt.savefig('plots/pred_fit_num_mut_cnns.eps', format='eps')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CHANGE BELOW BIT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "<>:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "/var/folders/tv/s_6vtgbd0ms7v3myd2_g_9f40000gn/T/ipykernel_54739/4130845556.py:9: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  func_list = [float(func) for func in func_list.split(',') if func is not '']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load extrapolation predictions of wu dataset\n",
-    "df = pd.read_csv('gen_data/pred_extrapolation_wu.csv')\n",
-    "\n",
-    "for model in ['lr', 'fcn', 'gcn', 'cnn']:\n",
-    "    model_pred_list = []\n",
-    "    for i, func_list in enumerate(df[model+'_pred_all']):\n",
-    "        for c in '()[]\\n':\n",
-    "            func_list = func_list.replace(c, '')\n",
-    "        func_list = [float(func) for func in func_list.split(',') if func is not '']    \n",
-    "        model_pred_list.append(func_list)\n",
-    "    df[model+'_pred_all'] = model_pred_list\n",
-    "    \n",
-    "df['cnn_pred_all_sort'] = [pd.Series(ele).sort_values() for ele in df['cnn_pred_all']]\n",
-    "df['ensc_pred'] = [ele.iloc[5] for ele in df['cnn_pred_all_sort']]\n",
-    "df['ensm_pred'] = [ele.median() for ele in df['cnn_pred_all_sort']]"
+    "df = pd.read_csv('gen_data/pred_extrapolation_wu.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,12 +240,12 @@
     "    inplace=True\n",
     ")\n",
     "\n",
-    "fig_1d_src.to_csv('source_data_files/fig_1d_src.csv')"
+    "# fig_1d_src.to_csv('source_data_files/fig_1d_src.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,6 +281,7 @@
     "    df_mut = df.loc[df.HD == num_mut].copy()\n",
     "    if len(df_mut) > max_points:\n",
     "        df_mut = df_mut.sample(n=max_points, random_state=42)\n",
+    "\n",
     "    \n",
     "    # alpha as 1 - kde density\n",
     "    X = df_mut['enrich2_fit'].to_numpy().reshape(-1, 1)\n",
@@ -340,7 +327,7 @@
     "        lims = [max(row) for row in zip(axs[j,i].get_xlim(), axs[j,i].get_ylim())]\n",
     "        axs[j,i].set(xlim=lims, ylim=lims)\n",
     "        \n",
-    "plt.savefig('plots/scatterplots.png', dpi=300)"
+    "# plt.savefig('plots/scatterplots.png', dpi=300)"
    ]
   },
   {
