comment out save file line in notebook

--- a/01_extrapolation_analysis.ipynb
+++ b/01_extrapolation_analysis.ipynb
@@ -240,7 +240,7 @@
     "    inplace=True\n",
     ")\n",
     "\n",
-    "# fig_1d_src.to_csv('source_data_files/fig_1d_src.csv')"
+    "fig_1d_src.to_csv('source_data_files/fig_1d_src.csv')"
    ]
   },
   {
