add FileNotFoundError to 01_extrapolation_analysis.ipynb

--- a/01_extrapolation_analysis.ipynb
+++ b/01_extrapolation_analysis.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from itertools import chain\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -417,6 +418,10 @@
    ],
    "source": [
     "# fig 1e\n",
+    "\n",
+    "if not os.path.exists('gen_data/01e_pred_extrapolation_wu.csv'):\n",
+    "    raise FileNotFoundError(\"\"\"01e_pred_extrapolation_wu.csv is a large file not included in the GitHub repo.\n",
+    "          File can be generated using `make extrapolation` (requires the `gb1_inf` conda environment).\"\"\")\n",
     "\n",
     "df = pd.read_csv('gen_data/01e_pred_extrapolation_wu.csv')\n",
     "\n",
